--- a/src/app/components/HomePage/styles.module.css
+++ b/src/app/components/HomePage/styles.module.css
@@ -12,6 +12,7 @@
     margin-top: 4rem;
     position: relative;
     scroll-behavior: smooth;
+    z-index: 10;
   }
   
   .home__container {
@@ -40,6 +41,7 @@
   .home__circle {
     position: relative;
     width: 100%;
+    z-index: -10;
   }
   
   .home__circle1 {
@@ -52,8 +54,6 @@
   
   .home__circle2 {
     position: absolute;
-    bottom: -6rem;
-    left: -2rem;
     width: 350px;
     z-index: -1;
   }
@@ -63,6 +63,16 @@
     top: 3rem;
     right: 10rem;
     width: 300px;
+    z-index: 1;
+  }
+
+  .home__circle4 {
+    position: absolute;
+    bottom: 10rem;
+    left: 12rem;
+    width: 200px;
+    z-index: -1;
+    filter: blur(10px);
   }
   
   .button__home {
