--- a/src/app/components/HomePage/styles.module.css
+++ b/src/app/components/HomePage/styles.module.css
@@ -3,234 +3,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Poppins:wght@500;700;900&family=Roboto:wght@900&display=swap');
 
 @font-face {
-  font-family: 'Fontbaru';
-  src: url('/fonts/fontbaru.ttf') format('truetype');
-  /* Tambahkan varian lain jika diperlukan (mis., Bold, Italic) */
+  font-family: 'Gradient';
+  src: url('/fonts/Gradient.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Helvetica';
+  src: url('/fonts/NeueHelveticaBQBlack.ttf') format('truetype');
 }
 .home {
-    margin-inline: 3rem;
-    margin-top: 4rem;
-    position: relative;
-    scroll-behavior: smooth;
-    z-index: 10;
-  }
-  
-  .home__container {
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  .home__text {
-    font-family: "Fontbaru";
-    text-align: center;
-  }
-  
-  .home__h1 {
-    font-weight: 600;
-    font-size: 5rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  .home__paragraph {
-    font-weight: 400;
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    font-family: "Montserrat";
-  }
-  
-  .home__circle {
-    position: relative;
+    margin: 0 3rem;
+    height: 100vh;
     width: 100%;
-    z-index: -10;
+    
   }
   
-  .home__circle1 {
-    position: absolute;
-    bottom: 3rem;
-    right: 2rem;
-    width: 300px;
-    z-index: -1;
+  .home_container {
+    display:grid;
+    grid-template-columns: repeat(2,max-content);
   }
   
-  .home__circle2 {
-    position: absolute;
-    width: 350px;
-    z-index: -1;
+  .home_text {
+    font-family: "Helvetica";
+    display: flex;
+    flex-direction: column;
+    margin-top:13rem;
+    font-weight: 900;
+    font-size: 8rem;
+    height: 100vh;
+    line-height: 7rem;
+    width:850px;
   }
-  
-  .home__circle3 {
-    position: absolute;
-    top: 3rem;
-    right: 10rem;
-    width: 300px;
-    z-index: 1;
+  .home_h1{
+    font-size: 6rem;
   }
-
-  .home__circle4 {
-    position: absolute;
-    bottom: 10rem;
-    left: 12rem;
-    width: 200px;
-    z-index: -1;
-    filter: blur(10px);
-  }
-  
-  .button__home {
-    display: inline-block;
-    background-color: rgb(29, 29, 49);
-    color: white;
-    padding: 1rem 1.75rem;
-    border-radius: .5rem;
-    font-weight: 400;
-    transition: .3s;
-    cursor: pointer;
-  }
-  
-  .button__home:hover {
-    background-color: rgb(21, 21, 68)
-  }
-  
-  .button__icon {
-    transition: .3s;
-  }
-  
-  .button__home:hover .button__icon {
-    transform: translateX(.5rem);
-  }
-  
-  .button_flex {
-    display: inline-flex;
-    align-items: center;
-    column-gap: .5rem;
-  }
-  
-  
-  /*=============== BREAKPOINTS ===============*/
-  /* For small devices */
-  
-  @media screen and (max-width: 320px) {
-    .home {
-      margin-inline: 1.5rem;
-      height: 100vh;
-    }
-  
-    .home__circle1 {
-      bottom: 9rem;
-      right: -1.5rem;
-      width: 100px;
-      z-index: -1;
-    }
-  
-    .home__circle2 {
-      bottom: -8rem;
-      left: -3rem;
-      width: 200px;
-      z-index: -1;
-    }
-  
-    .home__circle3 {
-      top: 10rem;
-      right: -1rem;
-      width: 200px;
-  
-    }
-  
-    .home__h1 {
-      font-weight: 600;
-      font-size: 2.5rem;
-      margin-bottom: 1.5rem;
-    }
-  
-    .home__paragraph {
-      font-weight: 400;
-      font-size: 0.98rem;
-      margin-bottom: 1rem;
-      font-family: "Montserrat";
-    }
-  
-  
-  }
-  
-  @media screen and (max-width: 576px) {
-  
-    .home__circle1 {
-      bottom: 9rem;
-      right: -1.5rem;
-      width: 100px;
-      z-index: -1;
-    }
-  
-    .home__circle2 {
-      bottom: -8rem;
-      left: -3rem;
-      width: 200px;
-      z-index: -1;
-    }
-  
-    .home__circle3 {
-      top: 12rem;
-      right: -1rem;
-      width: 200px;
-  
-    }
-  
-    .home__h1 {
-      font-weight: 600;
-      font-size: 3rem;
-      margin-bottom: 1.5rem;
-    }
-  
-    .home__paragraph {
-      font-weight: 400;
-      font-size: 1.2rem;
-      margin-bottom: 1rem;
-      font-family: "Montserrat";
-    }
-  }
-  
-  @media screen and (max-width: 768px) {
-    .home__circle1 {
-      bottom: 8rem;
-      right: -1.5rem;
-  
-    }
-  
-    .home__circle2 {
-      bottom: -12rem;
-      left: -4rem;
-    }
-  
-    .home__circle3 {
-      top: 18rem;
-      right: -1rem;
-      width: 400px;
-      /* Styles for screens with a minimum height of 800px and maximum height of 932px */
-    }
-  }
-  
-  @media screen and (min-width: 769px) {
-  
-    .home__circle1 {
-      bottom: 8rem;
-      right: -1.5rem;
-  
-    }
-  
-    .home__circle2 {
-      bottom: -12rem;
-      left: -4rem;
-    }
-  
-    .home__text {
-      opacity: 1;
-    }
-  }
-  
-  @media screen and (min-width:912px) {
-    .home {
-      margin-top: 15rem;
-    }
-  
-  }
-  
-  
+ .home_h1_3{
+  font-size: 10rem;
+ }
+ .home_description{
+  width: 150px;
+ }
+ .home_description_best{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 2rem;
+  font-family: "Helvetica";
+  font-weight: 600;
+ }
