--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
 
   .Page{
     overflow-x:hidden;
-    height: 100vh;
+    height: 1000px;
     background: rgb(205,210,255);
 background: radial-gradient(circle, rgba(205,210,255,1) 0%, rgba(255,255,255,1) 46%)};
 
