--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Poppins:wght@500;700;900&family=Roboto:wght@900&display=swap');
 
+
   body{
     margin: 0;
     padding: 0;
@@ -9,10 +10,12 @@
   }
 
   a{ text-decoration: none;}
-
+  .all{
+    overflow-x: hidden;
+  }
   .Page{
     overflow-x:hidden;
-    height: 1000px;
+    overflow-y: hidden;
     background: rgb(205,210,255);
 background: radial-gradient(circle, rgba(205,210,255,1) 0%, rgba(255,255,255,1) 46%)};
 
