--- a/src/app/components/HomePage/styles.module.css
+++ b/src/app/components/HomePage/styles.module.css
@@ -8,19 +8,29 @@
 }
 @font-face {
   font-family: 'Helvetica';
-  src: url('/fonts/NeueHelveticaBQBlack.ttf') format('truetype');
+  src: url('/fonts/NeueHelveticaBQBlack.otf') format('opentype');
+}
+@font-face {
+  font-family: 'GeneralSans-Bold';
+  src: url('/fonts/GeneralSans-Bold.otf') format('opentype');
+}
+@font-face {
+  font-family: 'GeneralSans-Medium';
+  src: url('/fonts/GeneralSans-Medium.otf') format('opentype');
 }
 
 .home{
-  margin: 0 1rem;
+  margin: 0 1rem 12rem 1rem;
+  height: 100%;
 }
 .home_container{
   grid-template-columns:50% 50% ;
   display: grid;
   position: relative;
+  z-index: 10;
 }
 .home_text{
-  font-family: "Helvetica";
+  font-family: "GeneralSans-Bold";
   display: flex;
   line-height: 4rem;
   margin-top: 25rem;
@@ -52,7 +62,7 @@
   justify-content: flex-start;
   flex-direction: column;
   align-items: normal;
-  font-family: "Poppins";
+  font-family: "GeneralSans-Medium";
   font-weight: 600;
   position: relative;
   z-index: 10;
@@ -99,7 +109,7 @@
     .home_h1_2{
       font-size: 2.5rem;
     }
-    
+  
     .home_h1_3{
       font-size:3.5rem;
     }
@@ -122,7 +132,7 @@
 
  @media screen and (min-width: 576px)  {
   .home{
-    margin: 0 2rem;
+    margin: 0 2rem 13rem 2rem;
   }
   .home_container{
     grid-template-columns:300px max-content ;
@@ -142,7 +152,7 @@
  }
  @media screen and (min-width: 768px)  {
   .home{
-    margin: 0 3rem;
+    margin: 0 3rem 15rem 3rem;
   }
   .home_container{
     grid-template-columns:500 max-content ;
@@ -178,9 +188,7 @@
 
  @media screen and (min-width: 1023px)  {
   .home {
-    margin: 0 3rem;
-    width: 100%;
-    
+    margin: 0 3rem 15rem 3rem;
   }
   
   .home_container {
@@ -191,7 +199,6 @@
   
   .home_text {
     position: relative;
-    font-family: "Helvetica";
     display: flex;
     flex-direction: column;
     margin-top:13rem;
@@ -220,7 +227,7 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  font-family: "Poppins";
+  margin: 8rem 0 0 4rem;
   font-weight: 600;
   gap:1rem;
  }
@@ -240,3 +247,7 @@
  }
 
  }
+
+
+
+
