--- a/src/app/components/header/style.module.css
+++ b/src/app/components/header/style.module.css
@@ -77,12 +77,12 @@ cursor: pointer;
   font-size: 3rem;
 }
   .main {
-    padding: 30px;
+    margin: 30px;
     position: fixed;
     right: 10px;
     top:10px;
     z-index: 1000;
-  
+    overflow-y: hidden;
     transform: scale(0);
     transform-origin: center;
     transition: transform 0.7s ease-in-out;
@@ -90,19 +90,39 @@ cursor: pointer;
   
   .main.active {
     transform: scale(1);
-    overflow-y: hidden;
+ 
   }
   
-  .button {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: #455CE9;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+ .button {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #000000;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden; /* Hide the overflow to clip the pseudo-element */
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  bottom: 0; /* Start from the bottom */
+  left: 0;
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color:#455CE9 ; /* You might want to change this color if it's not visible */
+  transition: height 0.6s ease; /* Add transition for smooth effect */
+}
+
+.button:hover::before {
+  height: 100%; /* Expand to 100% height */
+}
+
+  
   
   .burger {
     width: 100%;
