--- a/src/app/components/header/nav/style.module.scss
+++ b/src/app/components/header/nav/style.module.scss
@@ -6,14 +6,16 @@
     top: 0;
     color: white;
     z-index:100;
+    width:100%;
 
     .body{
         box-sizing: border-box;
         height: 100%;
-        padding: 100px;
+        width:100%;
+        margin-left: 3rem;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap:6rem;
 
         .nav{
             display: flex;
