--- a/src/app/components/header/style.module.css
+++ b/src/app/components/header/style.module.css
@@ -29,7 +29,7 @@
 }
 
 .nav__menu{
-  z-index:1000;
+  z-index:1002;
 }
 .nav__item{
     list-style: none;
@@ -81,7 +81,7 @@ cursor: pointer;
     position: fixed;
     right: 10px;
     top:10px;
-    z-index: 1000;
+    z-index: 100000;
     overflow-y: hidden;
     transform: scale(0);
     transform-origin: center;
@@ -169,7 +169,7 @@ cursor: pointer;
 /* For small devices */
 
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 320px) {
     .container {
       margin-inline: 1.5rem;
     }
@@ -182,10 +182,22 @@ cursor: pointer;
     }
   }
   
+@media screen and (min-width: 320px) {
+  
+  .header{
+    width:90%;
+  }
+  .nav__menu {
+      display: none;
+    }
+    .nav{
+      margin-inline:1rem;
+    }
 
+}
 
 /* For large devices */
-@media screen and (min-width:650px){
+@media screen and (min-width:768px){
   .nav{
     height: calc(3.5rem+ 2rem);
     margin-inline:3rem;
