--- a/src/app/components/AboutPage/styles.module.css
+++ b/src/app/components/AboutPage/styles.module.css
@@ -7,7 +7,7 @@
   .about_container{
     display: flex;
     justify-content: center;
-    margin:0 1rem;
+    margin:2rem 1rem;
     position: relative;
     z-index: -10;
   }
@@ -18,7 +18,7 @@
     justify-content: center;
     margin-right: 4px;
     margin-bottom:4px;
-    font-size: clamp(2.5rem,6.5vw,10rem);
+    font-size: clamp(1rem,6.5vw,5rem);
     font-weight: 700;
     font-family: "GeneralSans-Medium";
   }
