--- a/src/app/components/ProjectPage/styles.module.css
+++ b/src/app/components/ProjectPage/styles.module.css
@@ -1,81 +1,29 @@
-
-@font-face {
-    font-family: 'GeneralSans-Bold';
-    src: url('/fonts/GeneralSans-Bold.otf') format('opentype');
-  }
-
-  @font-face {
-    font-family: 'Helvetica';
-    src: url('/fonts/NeueHelveticaBQBlack.otf') format('opentype');
-  }
-.project{
-    height:1500px;
-    margin: 1rem 1rem;
+/* styles.module.css */
+.berubah {
+  position: relative;
+  left:100px;
 }
 
-
-.project_text{
-    font-size: clamp(3.5rem,6.5vw,10rem);
-    font-weight: 800;
-    font-family: "GeneralSans-Bold";
-    margin-bottom:1rem;
+/* Tambahan gaya untuk tata letak gambar tumpukan */
+.berubah img:nth-child(1) {
+  position: absolute;
+  top: 150px;
+  left: 150px;
+  transition: transform 1s ease-in-out;
+  
 }
 
-.project_line{
-    width:100%;
-    height:5px;
-    background-color: black;
-    margin-bottom: 3rem;
+/* Animasi untuk gambar aktif */
+.berubah img:nth-child(2) {
+  transform: translateY(-30px);
+  position: absolute;
+  top:100px;
+  left:100px; /* Atur sesuai kebutuhan */
 }
 
-
-.project_example{
-    display: grid;
-    grid-template-rows: repeat(2,500px);
+.berubah img:nth-child(3) {
+  transform: translateY(-60px);
+  position: absolute;
+  top: 200px;
+  right:200px; /* Atur sesuai kebutuhan */
 }
-
-.project_background {
-    background: rgb(232, 232, 227);
-    border-radius: 4%;
-    height: 400px;
-    position: relative;
-    margin-bottom: 1rem;
-}
-
-.container {
-    font-size: 0.875rem;
-    display: flex;
-    font-weight: 500;
-    letter-spacing: 0.05em;
-    color: black; /* Ganti dengan kode warna yang sesuai */
-    align-items: center;
-    text-transform: uppercase;
-}
-
-.subContainer {
-    gap: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.label {
-    border-width: 1px;
-    border-style: solid;
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    border-radius: 9999px;
-    border-color: black;
-    cursor: pointer;
-}
-
-.dateLabel {
-    margin-left: 0.5rem;
-    border-width: 1px;
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    border-radius: 9999px;
-    background-color:black; /* Ganti dengan kode warna yang sesuai */
-    color: white; /* Ganti dengan kode warna yang sesuai */
-}
-
